# ChefDesktop

./: .dockerignore  .editorconfig  .eslintrc.cjs  .gitignore  .gitmodules  .prettierignore  .prettierrc  README.md  big_bash_time.sh  index.html  justfile  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js  svelte.config.js  vite.config.ts
.docker/: linux.x64.Dockerfile
.github/workflows/: CI.yml  rust.yml
libakrypt/: CMakeLists.txt
libakrypt/source/: cf_operations.c
src/: App.svelte  main.ts  styles.css  temp.svelte
src-tauri/: ;  Cargo.toml  build.rs  file  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: migrated.json
src-tauri/src/: lib.rs  macros.rs  main.rs  tauri_utils.rs  traits.rs  utils.rs
src-tauri/src/libs/: bacon.rs  base64.rs  bitwise_op.rs  ciphers.rs  mod.rs  vigenere_trait.rs
src-tauri/src/libs/libakrypt/: akrypt.rs  mod.rs  structs.rs
src-tauri/src/operations/: a1z26_cipher_decode_mod.rs  a1z26_cipher_encode_mod.rs  add_line_numbers_mod.rs  add_mod.rs  adler32_checksum_mod.rs  affine_cipher_decode_mod.rs  affine_cipher_encode_mod.rs  analyse_hash_mod.rs  and_mod.rs  argon2_compare_mod.rs  argon2_mod.rs  atbash_cipher_mod.rs  bacon_cipher_decode_mod.rs  bacon_cipher_encode_mod.rs  bcrypt_compare_mod.rs  bcrypt_mod.rs  bcrypt_parse_mod.rs  bifid_cipher_encode_mod.rs  blake2b_mod.rs  blake2s_mod.rs  filter_mod.rs  from_base64_mod.rs  from_base_mod.rs  hmac_mod.rs  kuznechik_decrypt_mod.rs  kuznechik_encrypt_mod.rs  magma_decrypt_mod.rs  magma_encrypt_mod.rs  md2_mod.rs  md4_mod.rs  md5_mod.rs  mod.rs  reverse_mod.rs  rsa_decrypt_mod.rs  rsa_encrypt_mod.rs  scrypt_mod.rs  sha1_mod.rs  sha2_mod.rs  sha3_mod.rs  to_base64_mod.rs  (+3 more)
src-tauri/src/run_operations/: a1z26_cipher_decode.rs  a1z26_cipher_encode.rs  add.rs  add_line_numbers.rs  adler32_checksum.rs  affine_cipher_decode.rs  affine_cipher_encode.rs  analyse_hash.rs  and.rs  argon2.rs  argon2_compare.rs  atbash_cipher.rs  bacon_cipher_decode.rs  bacon_cipher_encode.rs  bcrypt.rs  bcrypt_compare.rs  bcrypt_parse.rs  bifid_cipher_encode.rs  blake2b.rs  blake2s.rs  filter.rs  from_base.rs  from_base64.rs  hmac.rs  md2.rs  md4.rs  md5.rs  mod.rs  reverse.rs  rsa_decrypt.rs  rsa_encrypt.rs  sha1.rs  sha2.rs  sha3.rs  to_base.rs  to_base64.rs  vigenere_cipher_decode.rs  vigenere_cipher_encode.rs
src-tauri/src/tauri_commands/: mod.rs  operations.rs  utils.rs
src/lib/core/: baseOperation.ts  runOperations.ts  utils.ts
src/lib/core/operations/: AnalyseHash.ts  FromBase64.ts  Hmac.1.ts  Hmac.ts  KuznechickDecrypt.ts  KuznechickEncrypt.ts  Operations.ts  ToBase64.ts  tobase64.ts
src/lib/web/components/: IO.svelte  Input.svelte  Operations.svelte  Output.svelte  Recipe.svelte  Title.svelte
src/lib/web/componets/: Gutter.svelte  HGutter.svelte  Header.svelte  IO.svelte  Input.svelte  Operations.svelte  Output.svelte  Recipe.svelte  Title.svelte  VGutter.svelte  temp.ts
(+19 files in other folders)
