[package]
name = "chef_desktop"
version = "0.0.0"
description = "A Tauri App"
authors = ["CyberFatherRT"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
bcrypt = "0.15.0"
blake2 = "0.9.1"
digest = { version = "0.10.7", features = ["mac"] }
md-5 = "0.10.5"
md2 =  "0.10.2"
md4 = "0.10.2"
num = "0.4.1"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
itertools = "0.11.0"
rsa = "0.9.2"
rand = "0.8.5"
regex = "1.9.3"
sha1 = "0.10.5"
sha2 = "0.10.7"
sha3 = "0.10.8"
rust-argon2 = "1.0.1"
hmac = "0.12.1"
ripemd = "0.1.3"
whirlpool = "0.10.4"
serde_valid = "0.16.3"
tauri = { version = "1.5.4", features = [ "clipboard-write-text", "clipboard-read-text", "shell-open", "windows7-compat" ] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
lazy_static = "1.4.0"
scrypt = "0.11.0"
anyhow = "1.0.79"
base64 = "0.21.7"
hex = "0.4.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "z"
lto = true
strip = true
