[package]
name = "chefdesktop"
version = "0.0.0"
description = "Cross-platform application for working with various cipher algorithms, encoding and file analysys."
authors = ["CyberFatherRT <maks12ate@gmail.com>"]
license = "Apache-2.0"
keywords = ["crypto", "graphics", "gui", "file", "hash", "image", "time"]
repository = "https://github.com/CyberFatherRT/ChefDesktop"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cmake = "0.1.50"
tauri-build = { version = "2.0.0-beta.8", features = [] }

[dependencies]
anyhow = "1.0.79"
base64 = "0.21.7"
blake2 = "0.9.1"
bcrypt = "0.15.0"
digest = { version = "0.10.7", features = ["mac"] }
md-5 = "0.10.5"
md2 =  "0.10.2"
md4 = "0.10.2"
num = "0.4.1"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
itertools = "0.11.0"
rsa = "0.9.2"
rand = "0.8.5"
regex = "1.9.3"
sha1 = "0.10.5"
sha2 = "0.10.7"
sha3 = "0.10.8"
rust-argon2 = "1.0.1"
hmac = "0.12.1"
ripemd = "0.1.3"
whirlpool = "0.10.4"
tauri = { version = "2.0.0-beta.10", features = [] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
lazy_static = "1.4.0"
scrypt = "0.11.0"
hex = "0.4.3"
simd-adler32 = "0.3.7"
nix = { version = "0.28.0", features = ["process"] }
tauri-plugin-dialog = "2.0.0-beta.2"
tauri-plugin-clipboard-manager = "2.0.0-beta.2"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
strip = true
